# lyrics_machine

./: .gitignore  Croonify.bat  LyricForge.bat  README.md  app.py  cli.py  croonify_bridge.py  launch.py  processor.py  pyproject.toml  requirements.txt  run.bat  sample.lrc  serve.py  stem_separator.py  test_integration.py
aligners/: __init__.py  alignment_aeneas.py  alignment_hybrid.py  alignment_whisperx.py  audio_utils.py  config.py
config/: default.yaml
frontend/: app.js  index.html  style.css
src/croonify/: __init__.py  pipeline.py
src/croonify/alignment/: __init__.py  viterbi_aligner.py  whisperx_aligner.py
src/croonify/api/: __init__.py  server.py
src/croonify/audio/: __init__.py  features.py  separator.py
src/croonify/refinement/: __init__.py  prosody.py
src/croonify/scoring/: __init__.py  confidence.py
src/croonify/segmentation/: __init__.py  lines.py
src/croonify/text/: __init__.py  normalizer.py
static/: editor.html  index.html  lyric_editor.js  lyric_editor_actions.js  lyric_editor_table.js  lyric_editor_timeline.js
tests/: smoke_test.py  test_pipeline.py
tests/fixtures/: sample_lyrics.txt
