[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "croonify"
version = "0.1.0"
description = "AI-powered lyrics synchronization engine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Croonify Authors" },
]
keywords = ["lyrics", "synchronization", "karaoke", "whisper", "alignment", "audio", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch",
    "torchaudio",
    "openai-whisper",
    "librosa>=0.10.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "nltk>=3.8.0",
    "regex>=2023.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
whisperx = ["whisperx"]
demucs = ["demucs"]
full = ["whisperx", "demucs"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
croonify-cli = "cli:main"
croonify = "cli:main"

[project.urls]
Homepage = "https://github.com/croonify/croonify"
Documentation = "https://croonify.readthedocs.io"
Repository = "https://github.com/croonify/croonify"
"Bug Tracker" = "https://github.com/croonify/croonify/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
